# microsite

./: .clang-format  .gitignore  .prettierrc.yaml  README.md  fun-bugs.md
micro/: CMakeLists.txt  README.md  partitions.csv  sdkconfig
micro/components/jms_cache/: CMakeLists.txt  cache.c
micro/components/jms_cache/include/: jms_cache.h
micro/components/jms_error/include/: jms_error.h
micro/components/jms_filesystem/: CMakeLists.txt  filesystem.c
micro/components/jms_filesystem/include/: jms_filesystem.h
micro/components/jms_mime/: CMakeLists.txt  mime.c  mime.gperf  mime_gperf_output.c  mime_hash.c  priv_mime_hash.h
micro/components/jms_mime/include/: jms_mime.h
micro/components/jms_webserver/: CMakeLists.txt  webserver.c
micro/main/: CMakeLists.txt  Kconfig.projbuild  main.c
micro/main/certs/: fullchain.pem  privkey.pem
micro/main/jms/mime/: mime.c  mime.gperf  mime.h  mime_hash.c  priv_mime_hash.h
micro/test/: CMakeLists.txt  idf_component.yml  sdkconfig
micro/test/main/: CMakeLists.txt  main.c  test_filesystem.c  test_mime.c
new_site/: hugo.yaml
new_site/assets/css/: fonts.css  style.css
new_site/layouts/_default/: single.html
new_site/layouts/partials/: footer.html  header.html
new_site/public/: index.html
new_site/public/about/: index.html
new_site/public/categories/: index.html
new_site/public/categories/example/: index.html
new_site/public/note/: index.html
new_site/public/post/: index.html
new_site/public/posts/: index.html
new_site/public/tags/: index.html
new_site/static/css/: fonts.css  style.css
scripts/: README.md  cache-priority-list.txt  delete-extras.sh  flash-site.sh  gather-context.sh  generate-cachefile.sh  install-hooks.sh  install-services.sh  install_services.sh  pre-commit  renew-cert.sh  stress-test.sh  whitelist.txt
scripts/services/: monitor.sh  monitor_microsite.service  monitor_microsite.sh  watchdog.sh  watchdog_microsite.service
services/: README.md  watchdog.sh  watchdog_microsite.service
site/: 404.html  README.md  compress-image.sh  config.toml  generate-site.sh  hugo.yaml  index.css  index.html
site/assets/css/: fonts.css  style.css
site/content/: 404.html  _index.md  about-the-microsite.md  about.md  contact.md  index.html  presentation.md  projects.md  resume.md  rss.xml  sitemap.xml  sitemap_style.xsl  template.md  wip.md
site/content/blog/: 2015-07-23-lorem-ipsum.md  2016-02-14-hello-markdown.md  2017-06-13-a-quick-note.md  2017-06-14-another-note.md  2024-06-06-oldest-short-post.md  2024-10-10-older-short-post.md  2024-11-26-sample-image-heavy-post.md  2025-01-14-sample-code-heavy-post.md  2025-01-28-sample-short-post.md  2025-02-01-sample-long-post.md  2025-03-04-microsite-1.md  2025-06-26-microsite-2.md  _index.md
site/content/post/: 2016-02-14-hello-markdown.md
site/layouts/_default/: list.html  rss.xml  single.html  terms.html
site/layouts/blog/: list.html
site/layouts/partials/: header.html
site/layouts/shortcodes/: media.html
site/styles/: code.css  main.css
site/templates/: footer.html  header.html
zephyr_micro/: CMakeLists.txt  app.overlay  prj.conf
zephyr_micro/creds/: fullchain.pem  privkey.pem  wifi_credentials.cmake.template
zephyr_micro/learning/: 2025-02-09-configuration-workflow.md  2025-02-10-1-figured-out-heap-psram.md  2025-02-10-weird-heap-and-weird-flash.md
zephyr_micro/src/: main.c
(+14 files in other folders)
